<resources>
    <string name="app_name">Pharmacy</string>
    <string name="developed_by">Developed By Genesistechnosoft.com</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="register">Don\'t have an account?</string>
    <string name="signup">Sign Up Now</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="company">Company</string>
    <string name="oarea">Operating Area</string>
    <string name="enter_username">Please enter username</string>
    <string name="enter_pass">Please enter Password</string>
    <string name="username_pattern">Please remove space</string>
    <string name="enter_fname">Please enter First Name</string>
    <string name="enter_lname">Please enter Last name</string>
    <string name="enter_email">Please enter Email</string>
    <string name="enter_valid_email">Please enter valid email</string>
    <string name="enter_mobile">Please enter Mobile number</string>
    <string name="enter_company">Please enter Company</string>
    <string name="enter_area">Please enter Operating Area</string>
    <string name="enter_valid_mobile">Please enter valid mobile nummber</string>
    <string name="welcome_ge">Welcome to our pharmacy App</string>
    <string name="logout">Logout</string>
    <string name="drawer_opne">Drawer Open</string>
    <string name="drawer_close">Drawer close</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="rate">Rate</string>
    <string name="about">About Us</string>
    <string name="contact">Contact Us</string>
    <string name="vision">Our Vision</string>
    <string name="mission">Our Mission</string>
    <string name="change_pass">Change Password</string>
    <string name="dashboard">Dashboard</string>
    <string name="my_account">My Account</string>
    <string name="my_orders">My Orders</string>
    <string name="my_cart">My Carts</string>
    <string name="products">Products</string>
    <string name="no_network">Please check your internet connection !!</string>
    <string name="MRP">MRP:</string>
    <string name="description">Description</string>
    <string name="add_cart">Add To Cart</string>
    <string name="profile_updated">Profile Updated Successfully!!</string>
    <string name="profile_update_failed">Profile Updating Fail..!</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="select_qty">Select Quantity</string>
    <string name="remove_cart">Remove Cart</string>
    <string name="view_cart">View Cart</string>
    <string name="added_to_cart">Added to your cart</string>
    <string name="place_order">Place Order</string>
    <string name="cart_empty">EMPTY CART</string>
    <string name="custom_toast_message">Added to your cart</string>
    <string name="error_update_cart">Failed to update your cart</string>
    <string name="remove_cart_success">Remove to cart successful!!</string>
    <string name="name">Name</string>
    <string name="house_no">House No.</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="post_code">Pin Code / Zip Code</string>
    <string name="default_address">Default Address</string>
    <string name="submit">Submit</string>
    <string name="change_address">Add new address</string>
    <string name="change_address_place">Change or Add Address</string>
    <string name="contin">Continue</string>
    <string name="discount_on_mrp">Discount on MRP</string>
    <string name="add_new_address">Add New Address</string>
    <string name="select_address">*Please select address which you want delivery*</string>
    <string name="enter_name">Please enter name</string>
    <string name="enter_house_no">Enter House No.</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_city">Enter city</string>
    <string name="enter_pincode">Enter Pin Code \\ Zip Code</string>
    <string name="address_added_success">Address added successfully</string>
    <string name="currency_symbol">₹</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="address_update_success">Address updated Successfully</string>
    <string name="price_detail">Price Details</string>
    <string name="discount">Discount</string>
    <string name="total_amount">Total Amount</string>
    <string name="order_name">Order No.</string>
    <string name="order_date">Order Date</string>
    <string name="order_no">Order No.</string>
    <string name="customer_name">Customer Name</string>
    <string name="quantity">Quantity</string>
    <string name="nett_amount">Nett Amount</string>
    <string name="view_details">View Details</string>
    <string name="pay_online">Pay Online</string>
    <string name="due_amount">Due Amount</string>
    <string name="paid_status">Paid Status</string>
    <string name="due_balance">Due Balance</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="invalid_amount">Please enter less then or equal amount of due balance</string>
    <string name="trans_id">Transaction ID</string>
    <string name="recieved_amt">Recieved Amount</string>
    <string name="not_found_history">Not Found History</string>
    <string name="delivery">Delivery</string>
    <string name="total_quantity">Total Quantity</string>
    <string name="order_empty">Empty Orders</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="product_summary">Product Summary</string>
    <string name="transactions">Transactions</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="coupons">Coupons</string>
    <string name="coupon">Coupon</string>
    <string name="apply">Apply</string>
    <string name="enter_coupon">Please enter coupon code</string>
    <string name="gst_amt">GST Amount</string>
    <string name="total">Total</string>
    <string name="nett">Nett</string>
    <string name="gst">GST</string>
</resources>
