<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/single_notification_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/toolbar_layout_head">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_name_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sunny Singh"
                android:textColor="@color/greyDark"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="(Default)"
                android:visibility="gone" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_address_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place_order"
            android:textColor="@color/greyDark"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_city_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-3dp"
            android:text="@string/post_code"
            android:textColor="@color/greyDark"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_pin_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-3dp"
            android:text="@string/post_code"
            android:textColor="@color/greyDark"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_mobile_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-3dp"
            android:text="@string/post_code"
            android:textColor="@color/greyDark"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/greyD" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:weightSum="2">

            <Button
                android:id="@+id/btn_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_change_pass_style"
                android:text="@string/edit"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_cart_remove_style"
                android:text="@string/delete"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>